--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,35 @@
   background-blend-mode: multiply;
   
 }
+
+
+.goog-te-gadget .goog-te-combo {
+  color: blue !important;
+}
+#google_translate_element { height: 26px !important; overflow: hidden !important; }
+body > .skiptranslate {
+  display: none;
+}
+.goog-te-banner-frame.skiptranslate {
+  display: none !important;
+}
+body {
+  top: 0px !important;
+}
+.goog-te-combo{
+  @apply  border outline-none
+}
+@keyframes fadeInZoom {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-fadeInZoom {
+  animation: fadeInZoom 0.5s ease-in-out;
+}
